# agent-skills-generator

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  crawler.rs  main.rs  processor.rs  utils.rs
